2004-10-19 Florian Boor <florian.boor@kernelconcepts.de>

	* feededit.c: Support for writing new feed configuration.
	              Finished feed editor.
				  Fixed several bugs, changed file location.

2004-10-18 Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Some formating changes and minor fixes.
	* fileedit.[c/h]: New files implementing package feed management 
	                  (unfinished).
	* Makefile: Added new module, changes version number scheme.
	            New version is 0.2.

2004-10-01 Florian Boor <florian.boor@kernelconcepts.de>

	* interface.c: Changed main window title to "Package Manager".

2004-09-22 Florian Boor <florian.boor@kernelconcepts.de>
    * removed obsolete gpe-packages.desktop
	* gpe-package.desktop.in: Turn startup notification on.
	* interface.c: Fixed duplicate shortcuts.
	* Makefile: Version update.

2004-08-25 Florian Boor <florian.boor@kernelconcepts.de>

	* Released V 0.0.12

2004-08-24 Florian Boor <florian.boor@kernelconcepts.de>
	Makefile: Install binary suid.

2004-08-19 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Fix unterminated list causing segfault.
	* Released V 0.0.11
	* Fixed some labels.

2004-08-18 Nils Faerber <nils.faerber@kernelconcepts.de>
	* Created a new error dialog box for ipkg errors
	* Error messages are now redirected into the messages notebook tab
	* Only *one* ipkg error dialog will pop up even for multiple errors
	  (until user acknowledges it)

2004-07-29 Florian Boor <florian.boor@kernelconcepts.de>
	* Released V 0.0.10
	* Makefile: Fixed version. 
	* main.c, interface.c, packages.c: Several minor fixes.

2004-07-27 Florian Boor <florian.boor@kernelconcepts.de>
	* po/gpe-package.pot: Added translation files.

2004-06-12 Florian Boor <florian.boor@kernelconcepts.de>
	* Makefile: Version 0.1.0 is what we are working on. 
	* Makefile: Updated to latest standards.
	* main.c: Removed obsolete definition of _GNU_SOURCE.
	