@@ -1,5 +1,6 @@
 2004-10-19 Florian Boor <florian.boor@kernelconcepts.de>
 
+	* interface.c: Changed some message types, minor format changes.
 	* feededit.c: Support for writing new feed configuration.
 	              Finished feed editor.
 				  Fixed several bugs, changed file location.
